--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>OTR-Test</groupId>
     <artifactId>otr-test</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
